ingress/ingress-staging-wayfinding-alpha-canada.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wayfinding-alpha-canada-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/app-root: /en/wayfinding
spec:
  tls:
  - hosts:
    - wayfinding.tbs.alpha.canada.ca
    secretName: wayfinding-alpha-canada-tls-secret-staging
  rules:
  - host: wayfinding.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: drupal-nginx
          servicePort: 80
        path: /
